# MathVector-Lab1-

./: CMakeLists.txt  main.c  tests.c
c/: FieldInfo.c  MathVector.c  UI.c
headers/: FieldInfo.h  MathVector.h  UI.h  UsersStructs.h
